[project]
name = "tracks-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/track"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   
]

[tool.ruff.lint.isort]
known-first-party = ["track"]
