[project]
name = "tracks-app"
version = "0.1.0"
description = "Application for analysis of fission tracks in mineral grains"
readme = "README.md"
requires-python = "~=3.12.0"
authors = [
    {name = "Vorobyev Viktor", email = "your.email@example.com"},
    {name = "Korotnev Viacheslav", email = "Korotnev.va@gmail.com"},
    {name = "Fedorov Vladimir", email = "your.email@example.com"},
]

license = {text = "MIT"}

dependencies = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/track"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.git",
    "/.venv",
    "/__pycache__",
    "/tests",
    "/docs",
    "*.pyc",
]

# ============ RUFF CONFIGURATION ============
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "RUF",  # Ruff-specific rules

    "A",    # flake8-builtins
    "ANN",  # flake8-annotations
    "C90",  # mccabe complexity
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "G",    # flake8-logging-format
    "LOG",  # flake8-logging
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "SLF",  # flake8-self
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TRY",  # tryceratops
]

ignore = [
    "E501",    # line too long
    "B008",    # do not perform function calls in argument defaults
    "B904",    # raise from None
    "S101",    # Use of assert
    "T201",    # print
    "RUF012",  # mutable class attributes
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["track"]
known-third-party = []
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "ANN"]
"*/__init__.py" = ["F401", "F403"]
"docs/*" = ["ALL"]
"src/track/__main__.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ============ MYPY CONFIGURATION ============
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "docs/"]
plugins = []

# ============ PYTEST CONFIGURATION ============
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# ============ COVERAGE CONFIGURATION ============
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20260518",
]

# ============ PROJECT METADATA ============
[project.urls]
Homepage = "https://github.com/VorobevVictor1/track-app"
